docman UI enhancement
git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/trunk@10291 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/src/www/docman/search.tpl.html
+++ b/src/www/docman/search.tpl.html
@@ -1,6 +1,6 @@
 <!--VTP_MAIN-->
 <!--VTP_FORMSEARCH-->
-<form action="search.php?group_id={#GROUP_ID}" method="POST">
+<form action="?group_id={#GROUP_ID}&view=search" method="POST">
 <input type="hidden" name="cmd" value="search" />
 <table width="98%" cellpadding="2" cellspacing="0" border="0">
 <tr>
