fix font display
git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/trunk@10307 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/src/www/docman/search.tpl.html
+++ b/src/www/docman/search.tpl.html
@@ -1,4 +1,5 @@
 <!--VTP_MAIN-->
+<div class="docmanDivIncluded">
 <!--VTP_FORMSEARCH-->
 <form action="?group_id={#GROUP_ID}&view=search" method="POST">
 <input type="hidden" name="cmd" value="search" />
@@ -37,4 +38,5 @@
 <tr><td style="color:#9A0202">{#TEXT}</td></tr>
 </table>
 <!--/VTP_MESSAGE-->
+</div>
 <!--/VTP_MAIN-->
