Use quotes for attributes values
git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/trunk@11035 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/htdocs/index-ajax-2.html
+++ b/htdocs/index-ajax-2.html
@@ -1,1 +1,1 @@
-<iframe src="http://fusionforge.org/plugins/mediawiki/wiki/fusionforge/index.php/Installing/UbuntuRepositories" frameborder="no" width=100% height=700></iframe>
+<iframe src="http://fusionforge.org/plugins/mediawiki/wiki/fusionforge/index.php/Installing/UbuntuRepositories" frameborder="no" width="100%" height="700"></iframe>
