--- a/htdocs/index-ajax-4.html
+++ b/htdocs/index-ajax-4.html
@@ -1,1 +1,1 @@
-<iframe src="http://fusionforgedemo.no-ip.org/" frameborder="no" width=100% height=700></iframe>
+<iframe src="http://fusionforgedemo.no-ip.org/" frameborder="no" width="100%" height="700"></iframe>
