--- a/htdocs/index-ajax-8.html
+++ b/htdocs/index-ajax-8.html
@@ -1,1 +1,1 @@
-<iframe src="http://www.planetforge.org/planet/" frameborder="no" width=100% height=700></iframe>
+<iframe src="http://www.planetforge.org/planet/" frameborder="no" width="100%" height="700"></iframe>
