--- a/htdocs/mib.html
+++ b/htdocs/mib.html
@@ -2,5 +2,5 @@
 <head>
 <title>GForge chat room</title>
 </head>
-<iframe width=800 height=600 scrolling=no style="border:0" src="http://embed.mibbit.com/?server=irc.freenode.net&channel=%23fusionforge&noServerNotices=true&noServerMotd=true&promptPass=true"></iframe>
+<iframe width="800" height="600" scrolling="no" style="border:0" src="http://embed.mibbit.com/?server=irc.freenode.net&channel=%23fusionforge&noServerNotices=true&noServerMotd=true&promptPass=true"></iframe>
 </html>
